Fix OSX build to avoid spaces on file names

--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -81,7 +81,7 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-application/name=""
+application/name="RaiseAndShine"
 application/info="Edit height maps and generate normal maps for 2D sprites"
 application/icon=""
 application/identifier=""
