Upgrade Godot export_presets as in 3.2.4-RC4, adding GDNative to HTML5

--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -8,18 +8,19 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../build/web/index.html"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=2
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/custom_html_shell=""
 html/head_include=""
-custom_template/release=""
-custom_template/debug=""
+html/canvas_resize_policy=0
 
 [preset.1]
 
@@ -31,21 +32,20 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../build/RaiseAndShine_win32.exe"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=false
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=false
-binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug=""
 codesign/enable=false
 codesign/identity=""
 codesign/password=""
@@ -73,7 +73,6 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../build/RaiseAndShine_osx.zip"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
@@ -106,21 +105,20 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../build/RaiseAndShine_linux32.x86"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.3.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=false
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=false
-binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug=""
 
 [preset.4]
 
@@ -132,18 +130,17 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../build/RaiseAndShine_linux64.x86_64"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.4.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug=""
