--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -20,13 +20,13 @@ vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/custom_html_shell=""
 html/head_include=""
-html/canvas_resize_policy=0
+html/canvas_resize_policy=2
 
 [preset.1]
 
 name="Windows x32"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
@@ -65,6 +65,47 @@ application/trademarks=""
 
 [preset.2]
 
+name="Windows x64"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../build/RaiseAndShine_win64.exe"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+codesign/enable=false
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
+
+[preset.3]
+
 name="Mac OSX"
 platform="Mac OSX"
 runnable=true
@@ -76,7 +117,7 @@ export_path="../build/RaiseAndShine_osx.zip"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.2.options]
+[preset.3.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -95,7 +136,7 @@ texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 
-[preset.3]
+[preset.4]
 
 name="Linux/X11 x32"
 platform="Linux/X11"
@@ -108,7 +149,7 @@ export_path="../build/RaiseAndShine_linux32.x86"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.3.options]
+[preset.4.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -120,7 +161,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 
-[preset.4]
+[preset.5]
 
 name="Linux/X11 x64"
 platform="Linux/X11"
@@ -133,7 +174,7 @@ export_path="../build/RaiseAndShine_linux64.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.4.options]
+[preset.5.options]
 
 custom_template/debug=""
 custom_template/release=""
