--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="debug/*"
 export_path="../build/web/index.html"
 script_export_mode=1
 script_encryption_key=""
@@ -21,6 +21,7 @@ vram_texture_compression/for_mobile=false
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
 
 [preset.1]
 
@@ -30,7 +31,7 @@ runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="debug/*"
 export_path="../build/RaiseAndShine_win32.exe"
 script_export_mode=1
 script_encryption_key=""
@@ -71,7 +72,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="debug/*"
 export_path="../build/RaiseAndShine_win64.exe"
 script_export_mode=1
 script_encryption_key=""
@@ -112,7 +113,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="debug/*"
 export_path="../build/RaiseAndShine_osx.zip"
 script_export_mode=1
 script_encryption_key=""
@@ -144,7 +145,7 @@ runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="debug/*"
 export_path="../build/RaiseAndShine_linux32.x86"
 script_export_mode=1
 script_encryption_key=""
@@ -169,7 +170,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
+exclude_filter="debug/*"
 export_path="../build/RaiseAndShine_linux64.x86_64"
 script_export_mode=1
 script_encryption_key=""
