--- a/src/addons/dockable_container/plugin.cfg
+++ b/src/addons/dockable_container/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Dockable Container"
-description="Container script that manages docking panels.
+description="Container script that manages docking/tiling UI panels.
 
 Panels are composed of tabs that can be dragged around and dropped to split another panel or compose its tabs.
 
@@ -9,5 +9,5 @@ Layout information is stored in Resource objects, so they can be saved/loaded fr
 
 This plugin also offers a replica of the Container layout to be edited directly in the inspector."
 author="gilzoide"
-version="0.1.0"
+version="0.2.0"
 script="plugin.gd"
