Add icons to export presets

--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -55,7 +55,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name=""
@@ -96,7 +96,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name=""
@@ -124,7 +124,7 @@ custom_template/debug=""
 custom_template/release=""
 application/name="RaiseAndShine"
 application/info="Edit height maps and generate normal maps for 2D sprites"
-application/icon=""
+application/icon="res://icon.icns"
 application/identifier=""
 application/signature=""
 application/short_version="1.0"
