--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="debug/*"
+exclude_filter="debug/*, addon/*/samples/*"
 export_path="../build/web/index.html"
 script_export_mode=1
 script_encryption_key=""
@@ -15,7 +15,7 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-variant/export_type=2
+variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/custom_html_shell=""
@@ -31,7 +31,7 @@ runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="debug/*"
+exclude_filter="debug/*, addon/*/samples/*"
 export_path="../build/RaiseAndShine_win32.exe"
 script_export_mode=1
 script_encryption_key=""
@@ -72,7 +72,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="debug/*"
+exclude_filter="debug/*, addon/*/samples/*"
 export_path="../build/RaiseAndShine_win64.exe"
 script_export_mode=1
 script_encryption_key=""
@@ -113,7 +113,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="debug/*"
+exclude_filter="debug/*, addon/*/samples/*"
 export_path="../build/RaiseAndShine_osx.zip"
 script_export_mode=1
 script_encryption_key=""
@@ -145,7 +145,7 @@ runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="debug/*"
+exclude_filter="debug/*, addon/*/samples/*"
 export_path="../build/RaiseAndShine_linux32.x86"
 script_export_mode=1
 script_encryption_key=""
@@ -170,7 +170,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="debug/*"
+exclude_filter="debug/*, addon/*/samples/*"
 export_path="../build/RaiseAndShine_linux64.x86_64"
 script_export_mode=1
 script_encryption_key=""
