--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -2,7 +2,7 @@
 
 name="HTML5"
 platform="HTML5"
-runnable=true
+runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
@@ -25,6 +25,31 @@ html/experimental_virtual_keyboard=false
 
 [preset.1]
 
+name="HTML5 Threaded"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter="debug/*, addon/*/samples/*"
+export_path="../build/web/threaded/index.html"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=1
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
+
+[preset.2]
+
 name="Windows x32"
 platform="Windows Desktop"
 runnable=false
@@ -36,7 +61,7 @@ export_path="../build/RaiseAndShine_win32.exe"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.1.options]
+[preset.2.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -64,7 +89,7 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 
-[preset.2]
+[preset.3]
 
 name="Windows x64"
 platform="Windows Desktop"
@@ -77,7 +102,7 @@ export_path="../build/RaiseAndShine_win64.exe"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.2.options]
+[preset.3.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -105,7 +130,7 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 
-[preset.3]
+[preset.4]
 
 name="Mac OSX"
 platform="Mac OSX"
@@ -118,7 +143,7 @@ export_path="../build/RaiseAndShine_osx.zip"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.3.options]
+[preset.4.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -137,7 +162,7 @@ texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 
-[preset.4]
+[preset.5]
 
 name="Linux/X11 x32"
 platform="Linux/X11"
@@ -150,7 +175,7 @@ export_path="../build/RaiseAndShine_linux32.x86"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.4.options]
+[preset.5.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -162,7 +187,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 
-[preset.5]
+[preset.6]
 
 name="Linux/X11 x64"
 platform="Linux/X11"
@@ -175,7 +200,7 @@ export_path="../build/RaiseAndShine_linux64.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
-[preset.5.options]
+[preset.6.options]
 
 custom_template/debug=""
 custom_template/release=""
